1st bib version

--- a/lib.bib
+++ b/lib.bib
@@ -86,7 +86,6 @@
       year           = "2005",
       pages          = "465-491",
       doi            = "10.1016/j.nuclphysbps.2004.11.107",
-      note           = "[,465(2004)]",
       eprint         = "astro-ph/0402487",
       archivePrefix  = "arXiv",
       primaryClass   = "astro-ph",
@@ -125,14 +124,13 @@
   numpages = {0},
   year = {1961},
   month = {Jan},
-  publisher = {American Physical Society},
-  doi = {10.1103/PhysRevLett.6.22},
-  url = {https://link.aps.org/doi/10.1103/PhysRevLett.6.22}
+  doi = {10.1103/PhysRevLett.6.22}
 }
 
 
 @article{Greisen1956,
 author = {Greisen, K.},
+title = {The Extensive Air Showers},
 journal = {Progr. Theor. Phys. Supp.},
 volume = {3},
 pages = {1},
@@ -243,6 +241,8 @@ doi = {10.1143/PTPS.6.93}
    title = "New electronics for the surface detectors of the Pierre Auger Observatory",
    publisher = {ICRC},
    booktitle = {\normalfont{INTERNATIONAL COSMIC RAY CONFERENCE, 35, ICRC, 2017}. \textbf{Proceedings...}},
+   eprint         = "1708.06592",
+   archivePrefix  = "arXiv",
    address = "Busan, South Korea",
    year = 2017
 }
@@ -253,6 +253,8 @@ doi = {10.1143/PTPS.6.93}
       title          = "{The Pierre Auger Observatory Upgrade}",
       booktitle      = {\normalfont{INTERNATIONAL COSMIC RAY CONFERENCE, 35, ICRC, 2017}. \textbf{Proceedings...}},
       publisher      = {ICRC},
+      eprint         = "1708.06592",
+      archivePrefix  = "arXiv",
       address        = "Busan, South Korea",
       year           = "2017"
 }
@@ -274,6 +276,8 @@ doi = {10.1143/PTPS.6.93}
       author         = "Kelley, John L.",
       title          = "{AERA: The Auger Engineering Radio Array}",
       booktitle      = {\normalfont{INTERNATIONAL COSMIC RAY CONFERENCE, 32, ICRC, 2011}. \textbf{Proceedings...}},
+      eprint         = "1107.4807",
+      archivePrefix  = "arXiv",
       address = "Beijing, China",
       publisher = {ICRC},
       year           = "2011"
@@ -285,6 +289,8 @@ doi = {10.1143/PTPS.6.93}
       title          = "{The AMIGA muon counters of the Pierre Auger Observatory:
                         Performance and first data}",
       booktitle      = {\normalfont{INTERNATIONAL COSMIC RAY CONFERENCE, 32, ICRC, 2011}. \textbf{Proceedings...}},
+      eprint         = "1107.4807",
+      archivePrefix  = "arXiv",
       address = "Beijing, China",
       publisher = {ICRC},
       year           = "2011"
@@ -295,6 +301,8 @@ doi = {10.1143/PTPS.6.93}
       title          = "{The AMIGA muon detectors of the Pierre Auger
                         Observatory: overview and status}",
       booktitle      = {\normalfont{INTERNATIONAL COSMIC RAY CONFERENCE, 33, ICRC, 2013}. \textbf{Proceedings...}},
+      eprint         = "1307.5059",
+      archivePrefix  = "arXiv",
       address = "Rio de Janeiro, Brazil",
       publisher = {ICRC},
       year           = "2013"
@@ -305,6 +313,8 @@ doi = {10.1143/PTPS.6.93}
       title          = "{The HEAT telescopes of the Pierre Auger Observatory:
                         Status and first data}",
       booktitle      = {\normalfont{INTERNATIONAL COSMIC RAY CONFERENCE, 32, ICRC, 2013}. \textbf{Proceedings...}},
+      eprint         = "1107.4807",
+      archivePrefix  = "arXiv",
       address = "Beijing, China",
       publisher = {ICRC},
       year           = "2011"
@@ -364,7 +374,7 @@ doi = {10.1143/PTPS.6.93}
       booktitle      = {\normalfont{INTERNATIONAL COSMIC RAY CONFERENCE, 33, ICRC, 2013}. \textbf{Proceedings...}},
       address = "Rio de Janeiro, Brazil",
       publisher = {ICRC},
-      year           = "2012"
+      year           = "2013"
 }
 
 
@@ -390,7 +400,7 @@ doi = {10.1143/PTPS.6.93}
 	Murakami, K. and Nagano, M. and Ohoka, H. and Teshima, M. and 
 	Tsushima, I. and Yoshii, H.},
     title = "{The cosmic ray energy spectrum above $3\times 10^{18}$ eV measured by the Akeno Giant Air Shower Array}",
-  journal = {Astroparticle Physics},
+  journal = {Astropart. Phys.},
      year = 1995,
     month = mar,
    volume = 3,
@@ -415,14 +425,15 @@ doi = {10.1143/PTPS.6.93}
       SLACcitation   = "%%CITATION = ARXIV:0904.4500;%%"
 }
 
-@article{LinsleySpec1963,
+@inproceedings{LinsleySpec1963,
    author = {Linsley, J.},
     title = "{Primary cosmic rays of energy 10$^{17}$ to 10$^{20}$ ev, the energy spectrum and arrival directions}",
-  journal = {International Cosmic Ray Conference},
-     year = 1963,
-   volume = 4,
-    pages = {77}
+      booktitle = {\normalfont{INTERNATIONAL COSMIC RAY CONFERENCE, 8, ICRC, 1963}. \textbf{Proceedings...}},
+      publisher = {ICRC},
+      address = "Jaipur, India",
+      year = 1963
 }
+
 
 @article{Abraham:2008ru,
       author         = "Abraham, J. and others",
@@ -623,10 +634,11 @@ doi = {10.1143/PTPS.6.93}
 }
 
 @article{Olinto2000,
-author = {Olinto, a V},
+author = {Olinto, A. V.},
 journal = {Phys.Rep.},
 pages = {329--348},
 title = {Ultra high energy cosmic rays: the theoretical challenge},
+doi = {10.1016/S0370-1573(00)00028-4},
 volume = {333},
 year = {2000}
 }
@@ -681,7 +693,7 @@ year = {2000}
 @article{Hillas1984,
 author = {Hillas, A. M.},
 doi = {10.1146/annurev.aa.22.090184.002233},
-journal = {Annual Review of Astronomy and Astrophysics},
+journal = {Annu. Rev. Astron. Astrophys.},
 number = {1},
 pages = {425--444},
 title = {{The Origin of Ultra-High-Energy Cosmic Rays}},
@@ -752,13 +764,13 @@ particles on the front of a shock wave}",
 }
 
 
-@article{Axford1977,
-   author = {Axford, W.~I. and Leer, E. and Skadron, G.},
-    title = "{The acceleration of cosmic rays by shock waves}",
-  journal = {International Cosmic Ray Conference},
-     year = 1977,
-   volume = 11,
-    pages = {132-137}
+@inproceedings{Axford1977,
+      author = {Axford, W.~I. and Leer, E. and Skadron, G.},
+      title = "{The acceleration of cosmic rays by shock waves}",
+      booktitle = {\normalfont{INTERNATIONAL COSMIC RAY CONFERENCE, 15, ICRC, 1977}. \textbf{Proceedings...}},
+      publisher = {ICRC},
+      address = "Plovdiv, Bulgaria",
+      year = 1977
 }
 
 
@@ -915,7 +927,6 @@ month = {nov},
 number = {4},
 pages = {800--819},
 title = {{Primary cosmic radiation and extensive air showers}},
-url = {https://doi.org/10.1007/BF02783106},
 volume = {22},
 year = {1961}
 }
@@ -960,7 +971,7 @@ year = {1961}
 
 @article{Patterson:1983qj,
       author         = "Patterson, John R. and Hillas, A. M.",
-      title          = "{The Rrelation of the Lateral Distribution of Cherenkov
+      title          = "{The Relation of the Lateral Distribution of Cherenkov
                         Light from Cosmic Rray Showers to the Distance of Maximum
                         Development}",
       journal        = "J. Phys.",
@@ -987,12 +998,12 @@ year = {1961}
       SLACcitation   = "%%CITATION = ASTRO-PH/0205302;%%"
 }
 
-@article{Nelson:1985ec,
+@manual{Nelson:1985ec,
       author         = "Nelson, W. Ralph and Hirayama, H. and Rogers, David W.
                         O.",
       title          = "{The Egs4 Code System}",
       year           = "1985",
-      reportNumber   = "SLAC-0265, SLAC-265, SLAC-R-0265, SLAC-R-265",
+      note   = "SLAC-0265, SLAC-265, SLAC-R-0265, SLAC-R-265",
       SLACcitation   = "%%CITATION = SLAC-0265;%%"
 }
 
@@ -1037,11 +1048,11 @@ year = {1968}
 }
 
 
-@article{Gheisha1985,
+@manual{Gheisha1985,
       author         = "Fesefeldt, H. C.",
       title          = "{Simulation of hadronic showers, physics and applications}",
       year           = "1985",
-      reportNumber   = "PITHA 85/02"
+      note   = "PITHA 85/02"
 }
 
 
@@ -1063,13 +1074,13 @@ year = {1968}
 }
 
 
-@article{Ferrari:2005zk,
+@manual{Ferrari:2005zk,
       author         = "Ferrari, Alfredo and Sala, Paola R. and Fasso, Alberto
                         and Ranft, Johannes",
       title          = "{FLUKA: A multi-particle transport code (Program version
                         2005)}",
       year           = "2005",
-      reportNumber   = "CERN-2005-010, SLAC-R-773, INFN-TC-05-11",
+      note   = "CERN-2005-010, SLAC-R-773, INFN-TC-05-11",
       SLACcitation   = "%%CITATION = CERN-2005-010;%%"
 }
 
@@ -1198,13 +1209,13 @@ year = {1968}
       SLACcitation   = "%%CITATION = ASTRO-PH/0606564;%%"
 }
 
-@article{Heck:1998vt,
+@manual{Heck:1998vt,
       author         = "Heck, D. and Schatz, G. and Thouw, T. and Knapp, J. and
                         Capdevielle, J. N.",
       title          = "{CORSIKA: A Monte Carlo code to simulate extensive air
                         showers}",
       year           = "1998",
-      reportNumber   = "FZKA-6019",
+      note   = "FZKA-6019",
       SLACcitation   = "%%CITATION = FZKA-6019;%%"
 }
 
@@ -1230,7 +1241,6 @@ year = {1968}
       year           = "1997",
       pages          = "29-42",
       doi            = "10.1016/S0920-5632(96)00847-X",
-      note           = "[,29(1997)]",
       SLACcitation   = "%%CITATION = NUPHZ,52B,29;%%"
 }
 
@@ -1294,14 +1304,14 @@ year = {1968}
       title          = "{Depth of maximum of air-shower profiles at the Pierre
                         Auger Observatory: Measurements above \E{17.2} and
                         Composition Implications}",
-      booktitle      = "{The Pierre Auger Observatory: Contributions to the 35th
-                        International Cosmic Ray Conference (ICRC 2017)}",
-      collaboration  = "Pierre Auger",
-      url            = "http://inspirehep.net/record/1618417/files/1617990_40-47.pdf",
-      year           = "2017",
-      pages          = "40-47",
-      SLACcitation   = "%%CITATION = INSPIRE-1618417;%%"
+      booktitle = {\normalfont{INTERNATIONAL COSMIC RAY CONFERENCE, 35, ICRC, 2017}. \textbf{Proceedings...}},
+      publisher = {ICRC},
+        eprint         = "1708.06592",
+   archivePrefix  = "arXiv",
+       address = "Busan, South Korea",
+      year = 2017
 }
+
 
 @article{Jui:2011vm,
       author         = "Jui, Charles C. H.",
@@ -1344,7 +1354,6 @@ year = {1968}
                         fluctuations: cosmic ray mass composition at $E_0 >= 10^{17}$ eV}",
       booktitle      = "{22nd European Cosmic Ray Symposium (ECRS 2010) Turku,
                         Finland, August 3-6, 2010}",
-      url            = "http://inspirehep.net/record/871836/files/arXiv:1010.1185.pdf",
       year           = "2010",
       doi            = "10.5194/astra-7-251-2011",
       eprint         = "1010.1185",
@@ -1901,12 +1910,12 @@ year = {1968}
       url           = "https://cds.cern.ch/record/1083804",
 }
 
-@article{Abgrall:2008zz,
+@manual{Abgrall:2008zz,
       author         = "Abgrall, N. and others",
       title          = "{Calibration and analysis of the 2007 data}",
       collaboration  = "NA61",
       year           = "2008",
-      reportNumber   = "CERN-SPSC-2008-018, CERN-SPSC-SR-033",
+      note   = "CERN-SPSC-2008-018, CERN-SPSC-SR-033",
       SLACcitation   = "%%CITATION = CERN-SPSC-2008-018;%%"
 }
 
@@ -2059,10 +2068,9 @@ year = {1968}
                         transport simulation and applications. Proceedings,
                         Conference, MC2000, Lisbon, Portugal, October 23-26,
                         2000}",
-      url            = "http://www-public.slac.stanford.edu/sciDoc/docMeta.aspx?slacPubNumber=SLAC-PUB-8740",
       year           = "2000",
       pages          = "1033-1038",
-      doi            = "10.1007/978-3-642-18211-2_166",
+      doi            = "10.1007/978-3-642-18211-2$\_$166",
       eprint         = "hep-ph/0012252",
       archivePrefix  = "arXiv",
       primaryClass   = "hep-ph",
@@ -2132,28 +2140,14 @@ year = {1968}
       SLACcitation   = "%%CITATION = ASTRO-PH/0611311;%%"
 }
 
-@article{Riehn:2015oba,
-      author         = "Riehn, Felix and Engel, Ralph and Fedynitch, Anatoli and
-                        Gaisser, Thomas K. and Stanev, Todor",
-      title          = "{A new version of the event generator Sibyll}",
-      booktitle      = "{Proceedings, 34th International Cosmic Ray Conference
-                        (ICRC 2015): The Hague, The Netherlands, July 30-August 6,
-                        2015}",
-      journal        = "PoS",
-      volume         = "ICRC2015",
-      year           = "2016",
-      pages          = "558",
-      eprint         = "1510.00568",
-      archivePrefix  = "arXiv",
-      primaryClass   = "hep-ph",
-      SLACcitation   = "%%CITATION = ARXIV:1510.00568;%%"
-}
 
 @inproceedings{Riehn:2015oba,
       author         = "Riehn, Felix and Engel, Ralph and Fedynitch, Anatoli and
                         Gaisser, Thomas K. and Stanev, Todor",
       title          = "{A new version of the event generator Sibyll}",
       booktitle      = {\normalfont{INTERNATIONAL COSMIC RAY CONFERENCE, 34, ICRC, 2015}. \textbf{Proceedings...}},
+      eprint         = "1510.00568",
+      archivePrefix  = "arXiv",
       address = "The Hague, The Netherlands",
       publisher = {ICRC},
       year           = "2015"
@@ -2277,7 +2271,9 @@ the Pierre Auger Observatory}",
       booktitle      = {\normalfont{INTERNATIONAL COSMIC RAY CONFERENCE, 35, ICRC, 2017}. \textbf{Proceedings...}},
       address = "Busan, South Korea",
       publisher = {ICRC},
-      year           = "2017"
+        eprint         = "1708.06592",
+   archivePrefix  = "arXiv",
+       year           = "2017"
 }
 
 
@@ -2305,7 +2301,8 @@ the Pierre Auger Observatory}",
                          distributions measured by the Pierre Auger and
                          Telescope Array Observatories}",
       booktitle      = {\normalfont{INTERNATIONAL COSMIC RAY CONFERENCE, 35, ICRC, 2017}. \textbf{Proceedings...}},
-      address = "Busan, South Korea",
+      eprint         = "1801.01018",
+      archivePrefix  = "arXiv",
       publisher = {ICRC},
       year           = "2017"
 }
@@ -2317,6 +2314,8 @@ the Pierre Auger Observatory}",
       title          = "{Measurements of Hadron Production in Pion-Carbon
                         Interactions with NA61/SHINE at the CERN SPS}",
       booktitle      = {\normalfont{INTERNATIONAL COSMIC RAY CONFERENCE, 35, ICRC, 2017}. \textbf{Proceedings...}},
+      eprint         = "1707.07902",
+      archivePrefix  = "arXiv",
       address = "Busan, South Korea",
       publisher = {ICRC},
       year           = "2017"
@@ -2344,7 +2343,7 @@ experiment and their relevance for air shower simulations}",
 
 @inproceedings{UngerICRC2011,
       author         = "Unger, M.",
-      title          = "{Hadro production Measurements with NA61/SHINE for the
+      title          = "{Hadron production Measurements with NA61/SHINE for the
                         Understanding of Extensive Air Showers}",
       booktitle      = {\normalfont{INTERNATIONAL COSMIC RAY CONFERENCE, 32, ICRC, 2011}. \textbf{Proceedings...}},
       address = "Beijing, China",
@@ -2362,12 +2361,14 @@ experiment and their relevance for air shower simulations}",
       year           = "2013"
 }
 
-@article{Herve:2015lra,
+@inproceedings{Herve:2015lra,
       author         = "Herve, Alexander",
       title          = "{Results from pion-carbon interactions measured by
                         NA61/SHINE for better understanding of extensive air
                         showers}",
       booktitle      = {\normalfont{INTERNATIONAL COSMIC RAY CONFERENCE, 34, ICRC, 2015}. \textbf{Proceedings...}},
+      eprint         = "1509.06586",
+      archivePrefix  = "arXiv",
       address = "The Hague, The Nederlands",
       publisher = {ICRC},
       year           = "2015"
@@ -2418,7 +2419,7 @@ in the NA61/SHINE experiment at CERN SPS}",
   author       = "Aduszkiewicz, A.", 
   title        = "{Operation and performance of Time Projection Chambers
 of SHINE/NA61 experiment at CERN}",
-  school       = "",
+  school       = "Uniwersytet Warszawski, Wydział Fizyki",
   year         = "2008"
   address      = "Warszawa"
 }
@@ -2504,7 +2505,7 @@ showers and fixed target accelerator data}",
   title        = "{Cosmic Rays and Particle Physics}",
   publisher    = "Cambridge University Press",
   year         = "2016"
-  address      = "",
+  address      = "Cambridge, United Kingdom",
   isbn         = "978-0-521-01646-9"
 }
 
@@ -2521,8 +2522,9 @@ showers and fixed target accelerator data}",
 %%%%%%%% CRMC  %%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%
 
-@book{CRMC,
-  author       = "Pierog, T. and Baus, C. and Ulrich, R.", 
+@misc{CRMC,
+  author       = "Pierog, T. and Baus, C. and Ulrich, R.",
+  title        = "CRMC (Cosmic Ray Monte Carlo package)",
   url          = "https://web.ikp.kit.edu/rulrich/crmc.html"
 }
 
