--- a/figures_hadron.tex
+++ b/figures_hadron.tex
@@ -34,7 +34,7 @@
     from the result of the fit, divided by the uncertainty of the observed number.}
   \label{fig:hadron:dedx:fit:dist350}
   \begin{center}
-    Source: By the author. 
+    \small Source: By the author. 
   \end{center}
 \end{figure}
 
@@ -54,7 +54,7 @@
     The RST and WST are shown in (a) and (b), respectively.}
   \label{fig:hadron:dedx:fit:chi350}
   \begin{center}
-    Source: By the author. 
+    \small Source: By the author. 
   \end{center}
 \end{figure}
 
@@ -86,7 +86,7 @@
   \caption{Calibration constants obtained from the \dedx fit of the WST and 158 \GeVc data set.}
   \label{fig:hadron:dedx:fit:cal158w}
   \begin{center}
-    Source: By the author. 
+    \small Source: By the author. 
   \end{center}
 \end{figure}
 
@@ -118,7 +118,7 @@
   \caption{Calibration constants obtained from the \dedx fit of the RST and 350 \GeVc data set.}
   \label{fig:hadron:dedx:fit:cal350r}
   \begin{center}
-    Source: By the author. 
+    \small Source: By the author. 
   \end{center}
 \end{figure}
 
@@ -151,7 +151,7 @@
   \caption{Calibration constants obtained from the \dedx fit of the WST and 350 \GeVc data set.}
   \label{fig:hadron:dedx:fit:cal350w}
   \begin{center}
-    Source: By the author. 
+    \small Source: By the author. 
   \end{center}
 \end{figure}
 
@@ -178,7 +178,7 @@
   \caption{Shape parameters obtained from the \dedx fit of the WST and 158 \GeVc data set.}
   \label{fig:hadron:dedx:fit:shape158w}
   \begin{center}
-    Source: By the author. 
+    \small Source: By the author. 
   \end{center}
 \end{figure}
 
@@ -203,7 +203,7 @@
   \caption{Shape parameters obtained from the \dedx fit of the RST and 350 \GeVc data set.}
   \label{fig:hadron:dedx:fit:shape350r}
   \begin{center}
-    Source: By the author. 
+    \small Source: By the author. 
   \end{center}
 \end{figure}
 
@@ -228,7 +228,7 @@
   \caption{Shape parameters obtained from the \dedx fit of the WST and 350 \GeVc data set.}
   \label{fig:hadron:dedx:fit:shape350w}
   \begin{center}
-    Source: By the author. 
+    \small Source: By the author. 
   \end{center}
 \end{figure}
 
@@ -279,7 +279,7 @@
   \caption{Particle fractions obtained from the \dedx fit of the WST and 158 \GeVc data set.}
   \label{fig:hadron:dedx:fit:frac158w}
   \begin{center}
-    Source: By the author. 
+    \small Source: By the author. 
   \end{center}
 \end{figure}
 
@@ -326,7 +326,7 @@
   \caption{Particle fractions obtained from the \dedx fit of the RST and 350 \GeVc data set.}
   \label{fig:hadron:dedx:fit:frac350r}
   \begin{center}
-    Source: By the author. 
+    \small Source: By the author. 
   \end{center}
 \end{figure}
 
@@ -373,7 +373,7 @@
   \caption{Particle fractions obtained from the \dedx fit of the WST and 350 \GeVc data set.}
   \label{fig:hadron:dedx:fit:frac350w}
   \begin{center}
-    Source: By the author. 
+    \small Source: By the author. 
   \end{center}
 \end{figure}
 
@@ -407,7 +407,7 @@
   \caption{Relative standard deviation ($\sigma_\text{r}$, see the definition in the text) of the particle fractions obtained with the SDEs for the WST and 158 \GeVc case. The $\pi^+$ case is shown in (a), $\pi^-$ in (b), K$^+$ in (c), K$^-$ in (d), p$^+$ in (e) and p$^-$ in (f).}
   \label{fig:hadron:dedx:fit:fake:relsig158w}
   \begin{center}
-    Source: By the author. 
+    \small Source: By the author. 
   \end{center}
 \end{figure}
 
@@ -439,7 +439,7 @@
   \caption{Relative standard deviation ($\sigma_\text{r}$, see the definition in the text) of the particle fractions obtained with the SDEs for the RST and 350 \GeVc case. The $\pi^+$ case is shown in (a), $\pi^-$ in (b), K$^+$ in (c), K$^-$ in (d), p$^+$ in (e) and p$^-$ in (f).}
   \label{fig:hadron:dedx:fit:fake:relsig350r}
   \begin{center}
-    Source: By the author. 
+    \small Source: By the author. 
   \end{center}
 \end{figure}
 
@@ -472,7 +472,7 @@
   \caption{Relative standard deviation ($\sigma_\text{r}$, see the definition in the text) of the particle fractions obtained with the SDEs for the WST and 350 \GeVc case. The $\pi^+$ case is shown in (a), $\pi^-$ in (b), K$^+$ in (c), K$^-$ in (d), p$^+$ in (e) and p$^-$ in (f).}
   \label{fig:hadron:dedx:fit:fake:relsig350w}
   \begin{center}
-    Source: By the author. 
+    \small Source: By the author. 
   \end{center}
 \end{figure}
 
@@ -505,7 +505,7 @@
   \caption{Average relative bias ($\delta_\text{r}$, see the definition in the text) of the particle fractions obtained with the SDEs for the WST and 158 \GeVc case. The $\pi^+$ case is shown in (a), $\pi^-$ in (b), K$^+$ in (c), K$^-$ in (d), p$^+$ in (e) and p$^-$ in (f).}
   \label{fig:hadron:dedx:fit:fake:reldev158w}
   \begin{center}
-    Source: By the author. 
+    \small Source: By the author. 
   \end{center}
 \end{figure}
 
@@ -537,7 +537,7 @@
   \caption{Average relative bias ($\delta_\text{r}$, see the definition in the text) of the particle fractions obtained with the SDEs for the RST and 350 \GeVc case. The $\pi^+$ case is shown in (a), $\pi^-$ in (b), K$^+$ in (c), K$^-$ in (d), p$^+$ in (e) and p$^-$ in (f).}
   \label{fig:hadron:dedx:fit:fake:reldev350r}
   \begin{center}
-    Source: By the author. 
+    \small Source: By the author. 
   \end{center}
 \end{figure}
 
@@ -569,7 +569,7 @@
   \caption{Average relative bias ($\delta_\text{r}$, see the definition in the text) of the particle fractions obtained with the SDEs for the WST and 350 \GeVc case. The $\pi^+$ case is shown in (a), $\pi^-$ in (b), K$^+$ in (c), K$^-$ in (d), p$^+$ in (e) and p$^-$ in (f).}
   \label{fig:hadron:dedx:fit:fake:reldev350w}
   \begin{center}
-    Source: By the author. 
+    \small Source: By the author. 
   \end{center}
 \end{figure}
 
@@ -605,7 +605,7 @@
   \caption{Correction factors ($c$, see the definition in the text) for the WST and 158 \GeVc case. The $\pi^+$ case is shown in (a), $\pi^-$ in (b), K$^+$ in (c), K$^-$ in (d), p$^+$ in (e) and p$^-$ in (f).}
   \label{fig:hadron:dedx:fit:fake:cor158w}
   \begin{center}
-    Source: By the author. 
+    \small Source: By the author. 
   \end{center}
 \end{figure}
 
@@ -637,7 +637,7 @@
   \caption{Correction factors ($c$, see the definition in the text) for the RST and 350 \GeVc case. The $\pi^+$ case is shown in (a), $\pi^-$ in (b), K$^+$ in (c), K$^-$ in (d), p$^+$ in (e) and p$^-$ in (f).}
   \label{fig:hadron:dedx:fit:fake:cor350r}
   \begin{center}
-    Source: By the author. 
+    \small Source: By the author. 
   \end{center}
 \end{figure}
 
@@ -669,7 +669,7 @@
   \caption{Correction factors ($c$, see the definition in the text) for the RST and 350 \GeVc case. The $\pi^+$ case is shown in (a), $\pi^-$ in (b), K$^+$ in (c), K$^-$ in (d), p$^+$ in (e) and p$^-$ in (f).}
   \label{fig:hadron:dedx:fit:fake:cor350w}
   \begin{center}
-    Source: By the author. 
+    \small Source: By the author. 
   \end{center}
 \end{figure}
 
@@ -689,7 +689,7 @@
     in full (open) symbols. The $\langle\pT\rangle$ is indicated on the top of each plot.}
   \label{fig:hadron:dedx:fit:final158w}
   \begin{center}
-    Source: By the author. 
+    \small Source: By the author. 
   \end{center}
 \end{figure}
 
@@ -703,7 +703,7 @@
     in full (open) symbols. The $\langle\pT\rangle$ is indicated on the top of each plot.}
   \label{fig:hadron:dedx:fit:final350r}
   \begin{center}
-    Source: By the author. 
+    \small Source: By the author. 
   \end{center}
 \end{figure}
 
@@ -717,7 +717,7 @@
     in full (open) symbols. The $\langle\pT\rangle$ is indicated on the top of each plot.}
   \label{fig:hadron:dedx:fit:final350w}
   \begin{center}
-    Source: By the author. 
+    \small Source: By the author. 
   \end{center}
 \end{figure}
 
@@ -732,7 +732,7 @@
     in full (open) symbols. The $\langle\pT\rangle$ is indicated on the top of each plot.}
   \label{fig:hadron:dedx:fit:out158r}
   \begin{center}
-    Source: By the author. 
+    \small Source: By the author. 
   \end{center}
 \end{figure}
 
@@ -746,7 +746,7 @@
     in full (open) symbols. The $\langle\pT\rangle$ is indicated on the top of each plot.}
   \label{fig:hadron:dedx:fit:out158w}
   \begin{center}
-    Source: By the author. 
+    \small Source: By the author. 
   \end{center}
 \end{figure}
 
@@ -760,7 +760,7 @@
     in full (open) symbols. The $\langle\pT\rangle$ is indicated on the top of each plot.}
   \label{fig:hadron:dedx:fit:out350r}
   \begin{center}
-    Source: By the author. 
+    \small Source: By the author. 
   \end{center}
 \end{figure}
 
@@ -774,7 +774,7 @@
     in full (open) symbols. The $\langle\pT\rangle$ is indicated on the top of each plot.}
   \label{fig:hadron:dedx:fit:out350w}
   \begin{center}
-    Source: By the author. 
+    \small Source: By the author. 
   \end{center}
 \end{figure}
 
@@ -794,7 +794,7 @@
     \pT bins is shown as red markers.}
   \label{fig:hadron:vzero:cuts:decaydist:350}
   \begin{center}
-    Source: By the author. 
+    \small Source: By the author. 
   \end{center}
 \end{figure}
 
@@ -838,7 +838,7 @@
     indicated on the top of each plot.}
   \label{fig:hadron:vzero:signal:dist:350:in}
   \begin{center}
-    Source: By the author. 
+    \small Source: By the author. 
   \end{center}
 \end{figure}
 
@@ -864,7 +864,7 @@
     The $\langle\pp\rangle$ of the phase space bin is indicated on the top of each plot.}
   \label{fig:hadron:vzero:signal:dist:350:out}
   \begin{center}
-    Source: By the author. 
+    \small Source: By the author. 
   \end{center}
 \end{figure}
 
@@ -894,7 +894,7 @@
     the \antilamb in (b) and (e) and the \kzeros in (c) and (f).}
   \label{fig:hadron:vzero:signal:chi:350}
   \begin{center}
-    Source: By the author. 
+    \small Source: By the author. 
   \end{center}
 \end{figure}
 
@@ -923,7 +923,7 @@
     the \antilamb in (b) and (e) and the \kzeros in (c) and (f).}
   \label{fig:hadron:vzero:signal:extracted:350}
   \begin{center}
-    Source: By the author. 
+    \small Source: By the author. 
   \end{center}
 \end{figure}
 
@@ -960,7 +960,7 @@
     $\pi^-$ in (b), K$^+$ in (c), K$^-$ in (d), p$^+$ in (e) and p$^-$ in (f).}
   \label{fig:hadron:correction:beta:dedx350}
   \begin{center}
-    Source: By the author. 
+    \small Source: By the author. 
   \end{center}
 \end{figure}
 
@@ -980,7 +980,7 @@
     \antilamb in (b) and \kzeros in (c).}
   \label{fig:hadron:correction:beta:vzero350}
   \begin{center}
-    Source: By the author. 
+    \small Source: By the author. 
   \end{center}
 \end{figure}
 
@@ -1025,7 +1025,7 @@
     uncertainties, while the gray bands show the systematic ones.}
   \label{fig:hadron:spec:dedx:all158:c0p1}
   \begin{center}
-    Source: By the author. 
+    \small Source: By the author. 
   \end{center}
 \end{figure}
 
@@ -1068,7 +1068,7 @@
     uncertainties, while the gray bands show the systematic ones.}
   \label{fig:hadron:spec:dedx:all158:c1p1}
   \begin{center}
-    Source: By the author. 
+    \small Source: By the author. 
   \end{center}
 \end{figure}
 
@@ -1105,7 +1105,7 @@
     uncertainties, while the gray bands show the systematic ones.}
   \label{fig:hadron:spec:dedx:all158:c0p2}
   \begin{center}
-    Source: By the author. 
+    \small Source: By the author. 
   \end{center}
 \end{figure}
 
@@ -1141,7 +1141,7 @@
     uncertainties, while the gray bands show the systematic ones.}
   \label{fig:hadron:spec:dedx:all158:c1p2}
   \begin{center}
-    Source: By the author. 
+    \small Source: By the author. 
   \end{center}
 \end{figure}
 
@@ -1183,7 +1183,7 @@
     uncertainties, while the gray bands show the systematic ones.}
   \label{fig:hadron:spec:dedx:all158:c0p3}
   \begin{center}
-    Source: By the author. 
+    \small Source: By the author. 
   \end{center}
 \end{figure}
 
@@ -1216,7 +1216,7 @@
     uncertainties, while the gray bands show the systematic ones.}
   \label{fig:hadron:spec:dedx:all158:c1p3}
   \begin{center}
-    Source: By the author. 
+    \small Source: By the author. 
   \end{center}
 \end{figure}
 
@@ -1260,7 +1260,7 @@
     uncertainties, while the gray bands show the systematic ones.}
   \label{fig:hadron:spec:dedx:all350:c0p1}
   \begin{center}
-    Source: By the author. 
+    \small Source: By the author. 
   \end{center}
 \end{figure}
 
@@ -1304,7 +1304,7 @@
     uncertainties, while the gray bands show the systematic ones.}
   \label{fig:hadron:spec:dedx:all350:c1p1}
   \begin{center}
-    Source: By the author. 
+    \small Source: By the author. 
   \end{center}
 \end{figure}
 
@@ -1341,7 +1341,7 @@
     uncertainties, while the gray bands show the systematic ones.}
   \label{fig:hadron:spec:dedx:all350:c0p2}
   \begin{center}
-    Source: By the author. 
+    \small Source: By the author. 
   \end{center}
 \end{figure}
 
@@ -1377,7 +1377,7 @@
     uncertainties, while the gray bands show the systematic ones.}
   \label{fig:hadron:spec:dedx:all350:c1p2}
   \begin{center}
-    Source: By the author. 
+    \small Source: By the author. 
   \end{center}
 \end{figure}
 
@@ -1419,7 +1419,7 @@
     uncertainties, while the gray bands show the systematic ones.}
   \label{fig:hadron:spec:dedx:all350:c0p3}
   \begin{center}
-    Source: By the author. 
+    \small Source: By the author. 
   \end{center}
 \end{figure}
 
@@ -1453,7 +1453,7 @@
     uncertainties, while the gray bands show the systematic ones.}
   \label{fig:hadron:spec:dedx:all350:c1p3}
   \begin{center}
-    Source: By the author. 
+    \small Source: By the author. 
   \end{center}
 \end{figure}
 
@@ -1477,7 +1477,7 @@
     uncertainties, while the gray bands show the systematic ones.}
   \label{fig:hadron:spec:vzero:all158:h0}
   \begin{center}
-    Source: By the author. 
+    \small Source: By the author. 
   \end{center}
 \end{figure}
 
@@ -1500,7 +1500,7 @@
     uncertainties, while the gray bands show the systematic ones.}
   \label{fig:hadron:spec:vzero:all158:h1}
   \begin{center}
-    Source: By the author. 
+    \small Source: By the author. 
   \end{center}
 \end{figure}
 
@@ -1527,7 +1527,7 @@
     uncertainties, while the gray bands show the systematic ones.}
   \label{fig:hadron:spec:vzero:all158:h2}
   \begin{center}
-    Source: By the author. 
+    \small Source: By the author. 
   \end{center}
 \end{figure}
 
@@ -1550,7 +1550,7 @@
     uncertainties, while the gray bands show the systematic ones.}
   \label{fig:hadron:spec:vzero:all350:h0}
   \begin{center}
-    Source: By the author. 
+    \small Source: By the author. 
   \end{center}
 \end{figure}
 
@@ -1573,7 +1573,7 @@
     uncertainties, while the gray bands show the systematic ones.}
   \label{fig:hadron:spec:vzero:all350:h1}
   \begin{center}
-    Source: By the author. 
+    \small Source: By the author. 
   \end{center}
 \end{figure}
 
@@ -1600,6 +1600,6 @@
     uncertainties, while the gray bands show the systematic ones.}
   \label{fig:hadron:spec:vzero:all350:h2}
   \begin{center}
-    Source: By the author. 
+    \small Source: By the author. 
   \end{center}
 \end{figure}
