--- a/uhecr.tex
+++ b/uhecr.tex
@@ -33,7 +33,7 @@ in Refs.~\cite{Aloisio:2017ooo,Mollerach:2017idb}.
   Two of the spectrum features are indicates: the knee and the ankle.}
   \label{fig:uhecr:overview:spec:swordy}
   \begin{center}
-    Source: SWORDY.~\cite{SwordyPlot2001}
+    \small Source: SWORDY.~\cite{SwordyPlot2001}
   \end{center}
 \end{figure}
 
@@ -120,7 +120,7 @@ value of the spectral index becomes very high ($\gamma>4$), characterizing the s
     (see text for details). The references to the data can be found in Ref.~\cite{\PDGPaper}.}
   \label{fig:uhecr:overview:spec:pdg}
   \begin{center}
-    Source: PATRIGNANI.~\cite{\PDGPaper}
+    \small Source: PATRIGNANI.~\cite{\PDGPaper}
   \end{center}
 \end{figure}
 
@@ -165,7 +165,7 @@ including iron nuclei.~\cite{Apel:2011mi,Apel:2013uni}
     for the KASCADE and KASCADE-Grande analysis, respectively.}
   \label{fig:uhecr:overview:spec:kascade}
   \begin{center}
-    Source: ANTONI.(top)~\cite{Antoni:2005wq}; FUHRMANN.(bottom)~\cite{Fuhrmann:2013lgx} 
+    \small Source: ANTONI.(top)~\cite{Antoni:2005wq}; FUHRMANN.(bottom)~\cite{Fuhrmann:2013lgx} 
   \end{center}
   
 \end{figure}
@@ -257,7 +257,7 @@ up to \E{20}.
     starburst galaxies and galaxy clusters.}
   \label{fig:uhecr:overview:hillas}
   \begin{center}
-    Source: MOLLERACH.~\cite{Mollerach:2017idb} 
+    \small Source: MOLLERACH.~\cite{Mollerach:2017idb} 
   \end{center}
 \end{figure}
 
@@ -307,7 +307,7 @@ as a function of its energy.
   \caption{Energy loss lengths for protons and iron nuclei from Ref.~\cite{RafaelThesis}.}
   \label{fig:uhecr:propagation:attenuation}
   \begin{center}
-    Source: BATISTA.~\cite{RafaelThesis} 
+    \small Source: BATISTA.~\cite{RafaelThesis} 
   \end{center}
 \end{figure}
 
@@ -366,7 +366,7 @@ scenario would be possible to use the arrival directions to infer the sources di
     through the CMB. The numbers above the curves indicate the proton initial energy.}
   \label{fig:uhecr:propagation:horizon}
   \begin{center}
-    Source: CRONIN.~\cite{Cronin:2004ye} 
+    \small Source: CRONIN.~\cite{Cronin:2004ye} 
   \end{center}
 \end{figure}
 
@@ -429,7 +429,7 @@ of systematic uncertainties in the primary energy estimation.
     only the analysis of the surface detectors data.~\cite{TASpec2017}}
   \label{fig:uhecr:spectrum}
   \begin{center}
-    Source: By the author.
+    \small Source: By the author.
   \end{center}
 \end{figure}
 
@@ -526,7 +526,7 @@ of the end of the cosmic ray spectrum.
     can be found in Ref.~\cite{Aab:2016zth}.}
   \label{fig:uhecr:combined}
   \begin{center}
-    Source: AAB.~\cite{Aab:2016zth} 
+    \small Source: AAB.~\cite{Aab:2016zth} 
   \end{center}
 \end{figure}
 
@@ -562,7 +562,7 @@ can be found in Ref.~\cite{\AugerPaper}.
     red dots. The blue circle show the approximate area of the AERA setup.}
   \label{fig:uhecr:auger:array}
   \begin{center}
-    SOURCE: STREICH.~\cite{AlexThesis}
+    \small SOURCE: STREICH.~\cite{AlexThesis}
   \end{center}
     
 \end{figure}
@@ -647,7 +647,7 @@ muons and the final FD energy ($E_\text{FD}$) is then obtained.
     and of the lateral distribution as measured by the SD (right plot).~\cite{\AugerPaper}}
   \label{fig:uhecr:auger:rec}
   \begin{center}
-    Source: AAB.~\cite{\AugerXmaxPRDPaper,\AugerPaper} 
+    \small Source: AAB.~\cite{\AugerXmaxPRDPaper,\AugerPaper} 
   \end{center}
 \end{figure}
 
@@ -705,7 +705,7 @@ the SD energy from the $S_{38}$ parameter.
   \label{fig:uhecr:auger:cal}
 
   \begin{center}
-    Source: AAB.~\cite{\AugerPaper} 
+    \small Source: AAB.~\cite{\AugerPaper} 
   \end{center}
 \end{figure}
 
