--- a/main.tex
+++ b/main.tex
@@ -1,5 +1,6 @@
 %\documentclass[12pt,openright,twoside,a4paper,chapter=TITLE,english]{USPSC}
-\documentclass[12pt,openright,twoside,a4paper,english,sumario=tradicional]{USPSC}
+%\documentclass[12pt,openright,twoside,a4paper,english,sumario=tradicional]{USPSC}
+\documentclass[12pt,openright,twoside,a4paper,english]{USPSC}
 
 % ---
 % Pacotes básicos - Fundamentais 
@@ -92,6 +93,7 @@
 \crefname{figure}{Fig.}{Figs.}
 \crefname{equation}{Eq.}{Eqs.}
 \crefname{item}{item}{items}
+\usepackage[font=small]{caption}
 
 \def\Put(#1,#2)#3{\leavevmode\makebox(0,0){\put(#1,#2){#3}}}
 
@@ -301,10 +303,12 @@
 % ----------------------------------------------------------
 \bibliography{lib}
 
+\addcontentsline{toc}{chapter}{APPENDIX}
 \appendix
+%\begin{appendices}
 \chapter{Additional figures}
 \include{figures_hadron}
-
+%\end{appendices}
 % ----------------------------------------------------------
 % Glossário
 % ----------------------------------------------------------
