--- a/showers.tex
+++ b/showers.tex
@@ -131,7 +131,7 @@ from the \dEdX profile.
     the hadronic interaction models \Fluka~\cite{\FlukaPaper} and \EposLHCLong.~\cite{\EposLHCPaper}}
   \label{fig:shower:phen:prof}
   \begin{center}
-    Source: By the author. 
+    \small Source: By the author. 
   \end{center}
  
 \end{figure}
@@ -183,7 +183,7 @@ is actually equivalent to only one proton shower with energy $E_0/A$.
     and \EposLHCLong.~\cite{\EposLHCPaper}}
   \label{fig:shower:phen:xmax}
   \begin{center}
-    Source: By the author. 
+    \small Source: By the author. 
   \end{center}
 \end{figure}
 
@@ -273,7 +273,7 @@ occur at energies of order of $\sim 100 \GeV$.
     Plot reproduced from Ref.~\cite{\IoanaICRC}}
   \label{fig:shower:phen:ioana}
   \begin{center}
-    Source: MARI\c{S}.~\cite{\IoanaICRC} 
+    \small Source: MARI\c{S}.~\cite{\IoanaICRC} 
   \end{center}
 \end{wrapfigure}
 
@@ -334,7 +334,7 @@ and after a certain atmospheric depth, only the muonic component survives to the
     level of 875 g/cm$^2$ with energy above 1 \GeV.}
   \label{fig:shower:phen:nmu}
   \begin{center}
-    Source: By the author. 
+    \small Source: By the author. 
   \end{center}
 \end{wrapfigure}
 
@@ -573,7 +573,7 @@ The \xmaxsig is also shown together with the \xmaxmean.
   \caption{Compilation of \xmaxmean results reproduced from Ref.~\cite{Kampert:2012mx}.}
   \label{fig:shower:observables:xmax:all}
   \begin{center}
-    Source: KAMPERT.~\cite{Kampert:2012mx} 
+    \small Source: KAMPERT.~\cite{Kampert:2012mx} 
   \end{center}
 \end{figure}
 
@@ -601,7 +601,7 @@ Observatory in Ref.~\cite{Aab:2014aea}.
   \label{fig:shower:observables:xmax:auger}
 
   \begin{center}
-    Source: BELLIDO.~\cite{\AugerXmaxICRC2017Paper} 
+    \small Source: BELLIDO.~\cite{\AugerXmaxICRC2017Paper} 
   \end{center}
 \end{figure}
 
@@ -621,7 +621,7 @@ Observatory in Ref.~\cite{Aab:2014aea}.
   \label{fig:shower:observables:xmax:ta}
 
   \begin{center}
-    Source: HANLON.~\cite{TAComp2017} 
+    \small Source: HANLON.~\cite{TAComp2017} 
   \end{center}
 \end{figure}
 
@@ -738,7 +738,7 @@ in 1999.
   \label{fig:shower:observables:nmu}
 
   \begin{center}
-    Source: ABU-ZAYYAD.(left)~\cite{\HiResMIAMuonPaper};DEMBINSKI.(middle)~\cite{\IceTopMuonPaper};AAB.(right)~\cite{\AugerHASMuonPaper} 
+    \small Source: ABU-ZAYYAD.(left)~\cite{\HiResMIAMuonPaper};DEMBINSKI.(middle)~\cite{\IceTopMuonPaper};AAB.(right)~\cite{\AugerHASMuonPaper} 
   \end{center}
 \end{figure}
 
@@ -827,7 +827,7 @@ in the previous section.
     (right).~\cite{\AugerMPDPaper}}
   \label{fig:shower:observables:further1}
   \begin{center}
-    Source: APEL.(left).~\cite{Apel:2017thr}; AAB.(right)~\cite{\AugerMPDPaper} 
+    \small Source: APEL.(left).~\cite{Apel:2017thr}; AAB.(right)~\cite{\AugerMPDPaper} 
   \end{center}
 
 \end{figure}
@@ -894,7 +894,7 @@ consistent composition inferences can be done.
   \label{fig:shower:observables:further2}
 
   \begin{center}
-    Source: AAB.~\cite{\AugerAsymmetryPaper,\AugerDeltaPaper} 
+    \small Source: AAB.~\cite{\AugerAsymmetryPaper,\AugerDeltaPaper} 
   \end{center}
 \end{figure}
 
@@ -965,7 +965,7 @@ The upper plot refers to the hadronic model \EposLHCLong, while the lower one to
   \label{fig:shower:observables:lna}
 
   \begin{center}
-    Source: By the author. 
+    \small Source: By the author. 
   \end{center}
 \end{figure}
 
